--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <!--Left Panel-->
     <div id = "header">
-      <p id = "header_text"><strong>WENHAO WU | Urban Growth Tracker | Chongqing, China </strong></p>
+      <p id = "header_text"><strong> Urban Growth Tracker | Chongqing, China </strong></p>
           <!-- <div id = "option">
               <ul>
                   <button class="link" style ="margin-left:15px;">Change to "national" scale for comparison: </button>
