--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div> -->
     </div>
     <div style="position: absolute; margin:15px; padding:10px; bottom:340px; left:25px; width: 400px; background-color: white; opacity: 0.6; filter: alpha(opacity=60); z-index:40;">
-      <p style="font-family: Arial; color:black;">Chongqing is one of the four national municipalities directed by the Central Government. Yuelai City, located half hour to the north of Chongqing's historic center, has been growing rapidly in the last decade. This map tracks the urban growth of the city from 1984 to 2016. </p>
+      <p style="font-family: Arial; color:black;">Chongqing is one of the four national municipalities directed by the Central Government. This map tracks the urban growth of the city from 1984 to 2016. </p>
     </div>
     <!-- <div style="position: absolute; left: 4px; width: 400px; top: 30px; bottom: 0;z-index:50;">
         <h1 class = "main-heading"><strong>Economic Development </strong> in <strong id = "color"> Chinese </strong> Cities</h1>
